# meetingtool

./: CMakeLists.txt  README.md  config.yml  main.cpp
.github/workflows/: build.yml
